# tidb_packer

./: .gitignore  Makefile  README.md  TUTORIAL.md  clean_workspace.sh  config.toml  cp_components.sh  pack_components.sh
downloader/: Cargo.toml
downloader/src/: main.rs
uploader/: Cargo.toml  config.toml
uploader/src/: main.rs
