[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11"
futures-util = "0.3"
indicatif = { version = "0.17", features = ["tokio"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
toml = "0.8"
