[package]
name = "uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["tokio"] }
md5 = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
